# docs_trial

./: Kumadefile.py  README.md  pyproject.toml
docs/: fibo.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/apidocs/fibo/: fibo.loop.md.txt  fibo.simple.md.txt
docs/apidocs/: index.html
docs/apidocs/fibo/: fibo.html  fibo.loop.html  fibo.simple.html
fibo/: loop.py  simple.py
sphinx/: conf.py  fibo.rst  index.md  modules.rst
sphinx/apidocs/: index.rst
sphinx/apidocs/fibo/: fibo.md
