[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fibo"
authors = [
    {name = "yamaimo", email = "hello@yamaimo.dev"},
]
description = "Fibonacci examples."
license = {text = "MIT License"}
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yamaimo/docs_trial"

[project.optional-dependencies]
develop = [
    "pysen",
    "black",
    "flake8",
    "isort",
    "mypy",
    "types-docutils",
    "kumade",
    "sphinx",
    "myst-parser[linkify]",
    "sphinx-autodoc2",
]

[tool.setuptools.dynamic]
version = {attr = "fibo.__version__"}

[tool.setuptools]
packages = ["fibo"]

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

[tool.pysen.lint.source]
excludes = ["Kumadefile.py"]
